crates/flux-tests/tests/neg/error_messages/desugar/variant_sig_illegal_binder.rs
#[flux::refined_by(b: int)]
pub enum E2 {
    #[flux::variant((i32[@n]) -> E2[@n])] //~ ERROR illegal binder
    A(i32),
}
